RenderLayer::styleChanged invalidates the GraphicsLayer needlessly https://bugs.webkit.org/show_bug.cgi?id=71517

Reviewed by Simon Fraser.

Unused code removal covered by existing tests.

The current code is invalidating the whole RenderLayerBacking as part of
a style change. However this is redundant with the repainting logic which
would invalidate only the necessary bits.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::styleChanged):
Remove the invalidation code as it duplicates and defeats the repaint logic.


git-svn-id: svn://svn.chromium.org/blink/trunk@99307 bbb929c8-8fbe-4397-9dbb-9b2b20218538